# myftp

./: .gitignore  CMakeLists.txt  Makefile  auteur
include/: commands.h  loops.h  telnet.h
src/: ftp_commands.c  ftp_commands2.c  ftp_commands3.c  ftp_commands4.c  ftp_commands5.c  ftp_commands6.c  ftp_commands7.c  ftp_commands8.c  main.c  main2.c
